--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,12 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 invoke = "^2.2.0"
+coverage = "^7.3.2"
 
+
+[tool.poetry.group.dev.dependencies]
+coverage = "^7.3.2"
+pytest = "^7.4.3"
 
 [build-system]
 requires = ["poetry-core"]
