--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ coverage = "^7.3.2"
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.3.2"
 pytest = "^7.4.3"
+pylint = "^3.0.2"
 
 [build-system]
 requires = ["poetry-core"]
