--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,13 @@ coverage = "^7.3.2"
 coverage = "^7.3.2"
 pytest = "^7.4.3"
 pylint = "^3.0.2"
+autopep8 = "^2.0.4"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+format = "invoke format"
+
+
