--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 invoke = "^2.2.0"
 coverage = "^7.3.2"
+pygame = "^2.5.2"
 
 
 [tool.poetry.group.dev.dependencies]
